--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ blinker==1.6.3
 click==8.1.7
 decorator==5.1.1
 executing==2.0.0
-Flask==3.0.0
+Flask==2.3.3
+Flask-Bcrypt==1.0.1
 Flask-DebugToolbar @ git+https://github.com/pallets-eco/flask-debugtoolbar@3b25e114e96a03c3261f17becb10a41abb28fd7c
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
@@ -32,5 +33,5 @@ stack-data==0.6.3
 traitlets==5.11.2
 typing_extensions==4.8.0
 wcwidth==0.2.8
-Werkzeug==3.0.0
+Werkzeug==2.3.7
 WTForms==3.1.0
