--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,18 @@ bcrypt==4.0.1
 blinker==1.6.3
 click==8.1.7
 decorator==5.1.1
+dnspython==2.4.2
+email-validator==2.0.0.post2
+exceptiongroup==1.1.3
 executing==2.0.0
 Flask==2.3.3
 Flask-Bcrypt==1.0.1
+Flask-Cors==4.0.0
 Flask-DebugToolbar @ git+https://github.com/pallets-eco/flask-debugtoolbar@3b25e114e96a03c3261f17becb10a41abb28fd7c
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 greenlet==3.0.0
+idna==3.4
 ipython==8.16.1
 itsdangerous==2.1.2
 jedi==0.19.1
